apps/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: my-web-svc
spec:
  selector:
    app: my-web
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web

spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web

  template:
    metadata:
      labels:
        app: my-web
    
    spec:
      containers:
      - name: my-web-con
        image: 61.254.18.30:5000/nginx:latest
        volumeMounts:
        - name: my-web-cm
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: my-web-cm
        configMap:
          name: nginx-configmap
          items:
          - key: default.conf
            path: default.conf
