apps/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testcat

spec:
  replicas: 1
  selector:
    matchLabels:
      app: testcat

  template:
    metadata:
      labels:
        app: testcat

    spec:
      containers:
      - name: testcat-con
        image: 61.254.18.30:5000/tomcat:latest
---
apiVersion: v1
kind: Service
metadata:
  name: testcat-svc
  labels:
    app: testcat
spec:
  ports:
  - port: 8080
    targetPort: 8080
