apps/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: three-tier-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "33tier.com"
