apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-3tier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 33tier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-web-svc
                port:
                  number: 80
