apps/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: three-tier-vs
  namespace: default
spec:
  hosts:
    - "33tier.com"
  gateways:
    - three-tier-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: my-web-svc
            port:
              number: 80
